# GEngine

./: .gitignore  CMakeLists.txt  Cracking down on them bugs.txt  README  README.md  TODO  clean.sh  cleanr.sh  credits.txt  license.txt  lm  lmr  mm  mmr  style_tips.txt
cmake/Modules/: FindCEGUI.cmake  FindGEngine.cmake  FindSDL2.cmake  FindSFML.cmake  FindSQLite.cmake
src/: CMakeLists.txt  GEngine.hpp  build_config.hpp.in  design.txt  gengine.hpp  global_defines.hpp  internal_header.hpp
src/audio/: CMakeLists.txt  audio.cpp  audio.hpp  audio_fmod.cpp  audio_fmod.hpp  design.txt
src/audio/Music/: CMakeLists.txt
src/config/: CMakeLists.txt  cfg.cpp  config.hpp  design.txt  variable.cpp
src/control/: design.txt
src/data/: CMakeLists.txt  data.hpp  sqlite.cpp  sqlite.hpp
src/engine/: blank _design.txt_ .txt  design.txt  include_all.hpp  internal_header.hpp
src/engine/config/: cfg.cpp  config.hpp  variable.cpp
src/engine/data/: design.txt
src/engine/error/: error.hpp  error_module.cpp
src/engine/file/: TODO  design.txt  file.cpp  file.hpp
src/engine/graphic/: design.txt  graphic.hpp
src/engine/graphic/2d/: 2d.cpp  2d.hpp  design.txt  image_manipulations.cpp  sprite.cpp
src/engine/graphic/window/: window.cpp  window.hpp
src/engine/math/: design.txt  math.hpp
src/engine/net/client/: client.hpp
src/engine/net/server/: design.txt  server.cpp  server.cpp.bak  server.hpp  server.hpp.bak
src/engine/rand/: design.txt  rand.cpp  rand.hpp
src/engine/sound/: design.txt
src/engine/string/: design.string.hpp.txt  string.cpp  string.hpp
src/engine/thread/: design.txt
src/error/: CMakeLists.txt  design.txt  error.cpp  error.hpp  error_module.cpp
src/file/: CMakeLists.txt  file.cpp  file.hpp
src/graphic/: CMakeLists.txt  graphic.hpp
src/graphic/2d/: 2d.cpp  2d.hpp  CMakeLists.txt  image_manipulations.cpp  sprite.cpp
src/graphic/3d/: 3d.cpp  3d.hpp  CMakeLists.txt  design.txt
src/graphic/window/: CMakeLists.txt  design.txt  window.cpp  window.hpp
src/interface/: CMakeLists.txt  design.txt  interface.cpp  interface.hpp  keymap.cpp
src/interface/homebrew/: CMakeLists.txt  design.txt  interface.cpp  interface.hpp
src/math/: CMakeLists.txt  math.cpp  math.hpp
src/misc/: CMakeLists.txt  design.txt  rand.cpp  rand.hpp  time.cpp  time.hpp
src/net/: CMakeLists.txt  design.txt
src/net/client/: CMakeLists.txt  client.cpp  client.hpp  design.txt
src/net/server/: CMakeLists.txt  server.cpp  server.hpp
src/rand/: CMakeLists.txt  rand.cpp  rand.hpp
src/sound/: CMakeLists.txt
src/sound/Music/: design.txt
src/string/: CMakeLists.txt  design.txt  string.cpp  string.hpp
