cmake_minimum_required(VERSION 2.6)
project(gengine)

add_subdirectory(config)
add_subdirectory(control)
add_subdirectory(data)
add_subdirectory(error)
add_subdirectory(file)
add_subdirectory(graphic)
add_subdirectory(interface)
add_subdirectory(math)
add_subdirectory(net)
add_subdirectory(rand)
add_subdirectory(sound)
add_subdirectory(string)
add_subdirectory(thread)

set(GEngine_SOURCES ${GEngine_SOURCES} PARENT_SCOPE)
set(GEngine_HEADERS ${GEngine_HEADERS} PARENT_SCOPE)
