add_subdirectory(config)
add_subdirectory(control)
add_subdirectory(data)
add_subdirectory(error)
add_subdirectory(file)
add_subdirectory(graphic)
add_subdirectory(interface)
add_subdirectory(math)
add_subdirectory(net)
add_subdirectory(rand)
add_subdirectory(sound)
add_subdirectory(string)
add_subdirectory(thread)

list(APPEND GEngine_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/GEngine.hpp)
list(APPEND GEngine_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/internal_header.hpp)

set(GEngine_SOURCES ${GEngine_SOURCES} PARENT_SCOPE)
set(GEngine_HEADERS ${GEngine_HEADERS} PARENT_SCOPE)
